--- a/home.html
+++ b/home.html
@@ -292,10 +292,10 @@
                     <footer>
                         <h1 id = "hf" class = "header4"> Chan Lee </h1>
                         
-                        <a href = "https://github.com/chanlee20"  id="github_icon_footer"> <i class="fa fa-github"></i></a>
-                        <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" id="linkedin_icon_footer" class = "icons2"> <i class="fa fa-linkedin"></i></a>
-                        <a href = "https://www.facebook.com/chan.lee.1004837" id="facebook_icon_footer" class = "icons2"> <i class="fa fa-facebook"></i></a>
-                        <a href = "https://www.instagram.com/chan.lee20/"  id="instagram_icon_footer" class = "icons2"> <i class="fa fa-instagram"></i></a>
+                        <a href = "https://github.com/chanlee20"  id="github_icon_footer" target="_blank"> <i class="fa fa-github" ></i></a>
+                        <a href = "https://www.linkedin.com/in/chan-lee-b38135a5/" id="linkedin_icon_footer" class = "icons2" target="_blank"> <i class="fa fa-linkedin"></i></a>
+                        <a href = "https://www.facebook.com/chan.lee.1004837" id="facebook_icon_footer" class = "icons2" target="_blank"> <i class="fa fa-facebook"></i></a>
+                        <a href = "https://www.instagram.com/chan.lee20/"  id="instagram_icon_footer" class = "icons2" target="_blank"> <i class="fa fa-instagram"></i></a>
                 
                         <div class = "cp">
                              <h4 class = "sf"> &#169; Chan Lee 2022 All Rights Reserved </h4>
