--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                         <div class = "am-container">
                             <div class="personal_info">
                                 <h1 class = "job"> Software Developer </h1>
-                                <h3 class = "desc"> I am currently working in Sobriety Hub, a startup ran by WashU students, as an intern focusing on full stack development. </h3>
+                                <h3 class = "desc"> I am an incoming tech analyst intern @Spectrum where I will be focusing on database managements and system developments. </h3>
                                 <div class= "column_info">
                                     <ul class = "col1">
                                         <li> <i class="fa-solid fa-location-dot" style="padding-right: 15px;"></i> <b> Location (USA): </b> <span> St. Louis, MO  </span></li>
@@ -155,7 +155,7 @@
                                     </div>
                                 </a>
 
-                                <a href="https://github.com/chanlee20/re-Loved" class="pj_container" style="text-decoration: none;" target="_blank">
+                                <a href="https://github.com/chanlee20/Pacman-AI" class="pj_container" style="text-decoration: none;" target="_blank">
                                     <div class= "pj_card">
                                         <img src="assets/personal_website/pacman.png" class= "pj_img">
                                         <div class="pj_card_desc">
@@ -217,7 +217,7 @@
                     <!-- Resume -->
                     <div id = "r" class = "resume">
                         <h1 id = "hr" class = "header"> Education / Work Experience </h1>
-                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/Chan Lee Official Resume Intern w_ GPA (16).pdf" target="_blank"> here </a> </h4>
+                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/Chan Lee Official Resume Intern w_ GPA (25).pdf" target="_blank"> here </a> </h4>
                         <div class="timeline_container">
                             <div class="timeline">
                                 <ul>
