--- a/home.html
+++ b/home.html
@@ -217,7 +217,7 @@
                     <!-- Resume -->
                     <div id = "r" class = "resume">
                         <h1 id = "hr" class = "header"> Education / Work Experience </h1>
-                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/Chan Lee Official Resume Intern w_ GPA (25).pdf" target="_blank"> here </a> </h4>
+                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/Chan Lee Official Resume Intern w_ GPA (29).pdf" target="_blank"> here </a> </h4>
                         <div class="timeline_container">
                             <div class="timeline">
                                 <ul>
@@ -234,7 +234,8 @@
                                             <h1> Incoming Tech Analyst Intern </h1> 
                                             <h4> Summer 2023  </h4>   
                                             <p>  <em> <a href="https://jobs.spectrum.com/" style="text-decoration: none; color: white;"> Spectrum </a> </em> </p>
-                                            <p> Utilize backend frameworks including Java and Hadoop to analyze billing system databases and communicate operational information to various organizations to facilitate smooth and efficient business operations.  </p>
+                                            <p> Develop a Python script using SQL queries and Selenium that automates the process of comparing marketing claims in billing statements and system reports to ensure that the data is up to date with user status. </p>
+                                            <p> Analyze conflicts that customers face in Spectrum products and utilize Mocha to send hits to those products to investigate the validity of data transaction. </p>
                                         </div>
                                     </li>
                                     <li>
