--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                         <div class = "am-container">
                             <div class="personal_info">
                                 <h1 class = "job"> Software Developer </h1>
-                                <h3 class = "desc"> I am an incoming tech analyst intern @Spectrum where I will be focusing on database managements and system developments. </h3>
+                                <h3 class = "desc"> I am a current tech analyst intern @Spectrum where I will be focusing on webscrapping and data automation. In addition, I will be working as a SWE intern @Tesla in the vehical automation team this fall, focusing on Front-End components utilizing various web frameworks. </h3>
                                 <div class= "column_info">
                                     <ul class = "col1">
                                         <li> <i class="fa-solid fa-location-dot" style="padding-right: 15px;"></i> <b> Location (USA): </b> <span> St. Louis, MO  </span></li>
@@ -226,12 +226,19 @@
                                             <h1> Bachelor of Science in Computer Science </h1> 
                                             <h4> 2020 - 2024 (Projected) </h4>   
                                             <p>  <em> Washington University in St. Louis </em> </p>
-                                            <p> A  <a href="https://www.w-block.com/" style="text-decoration: none; color: white"> W-Block </a> Lead Developer, <a href="https://acm.wustl.edu/" style="text-decoration: none; color: white"> ACM </a> Member,  <a href="https://www.instagram.com/kisswustl/" style="text-decoration: none; color: white"> KISS </a> Vice President. <br> GPA: 3.85</p>
+                                            <p> A  <a href="https://www.w-block.com/" style="text-decoration: none; color: white"> W-Block </a> ex-Lead Developer, <a href="https://acm.wustl.edu/" style="text-decoration: none; color: white"> ACM </a> Member,  <a href="https://www.instagram.com/kisswustl/" style="text-decoration: none; color: white"> KISS </a> Vice President. <br> GPA: 3.85</p>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="timeline-content">
-                                            <h1> Incoming Tech Analyst Intern </h1> 
+                                            <h1> Incoming SWE Intern - Front-End Development </h1> 
+                                            <h4> Fall 2023  </h4>   
+                                            <p>  <em> <a href="https://www.tesla.com/careers/" style="text-decoration: none; color: white;"> Tesla </a> </em> </p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="timeline-content">
+                                            <h1> Tech Analyst Intern </h1> 
                                             <h4> Summer 2023  </h4>   
                                             <p>  <em> <a href="https://jobs.spectrum.com/" style="text-decoration: none; color: white;"> Spectrum </a> </em> </p>
                                             <p> Develop a Python script using SQL queries and Selenium that automates the process of comparing marketing claims in billing statements and system reports to ensure that the data is up to date with user status. </p>
