update work status

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
                         <div class = "am-container">
                             <div class="personal_info">
                                 <h1 class = "job"> Software Developer </h1>
-                                <h3 class = "desc"> I am a current tech analyst intern @Spectrum where I will be focusing on webscrapping and data automation. In addition, I will be working as a SWE intern @Tesla in the vehical automation team this fall, focusing on Front-End components utilizing various web frameworks. </h3>
+                                <h3 class = "desc"> I am a current SWE intern @Tesla in the vehical automation inspection team, focusing on Front-End development utilizing React, Typescript, GraphQL, and more. </h3>
                                 <div class= "column_info">
                                     <ul class = "col1">
                                         <li> <i class="fa-solid fa-location-dot" style="padding-right: 15px;"></i> <b> Location (USA): </b> <span> St. Louis, MO  </span></li>
@@ -217,7 +217,7 @@
                     <!-- Resume -->
                     <div id = "r" class = "resume">
                         <h1 id = "hr" class = "header"> Education / Work Experience </h1>
-                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/Chan Lee Official Resume Intern w_ GPA (29).pdf" target="_blank"> here </a> </h4>
+                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/Chan Lee Official Resume Intern w_ GPA (43).pdf" target="_blank"> here </a> </h4>
                         <div class="timeline_container">
                             <div class="timeline">
                                 <ul>
@@ -231,9 +231,12 @@
                                     </li>
                                     <li>
                                         <div class="timeline-content">
-                                            <h1> Incoming SWE Intern - Front-End Development </h1> 
+                                            <h1> SWE Intern - Front-End Development </h1> 
                                             <h4> Fall 2023  </h4>   
                                             <p>  <em> <a href="https://www.tesla.com/careers/" style="text-decoration: none; color: white;"> Tesla </a> </em> </p>
+                                            <p> Develop the functionality to display JSON ML model outputs for 4,000 vision systems, responsible to prevent over 30,000 production quality defects in the Vision Automation Inspection team. </p>
+                                            <p> Communicate through label studio API to develop import/export functionality of JSON files to collect and download inspection data. </p>
+                                            <p> Refactor outdated codes to build more maintainable front-end components by following strict type definition and tailwind guidelines. </p>
                                         </div>
                                     </li>
                                     <li>
