--- a/home.html
+++ b/home.html
@@ -53,15 +53,15 @@
                     <div id = "am" class = "about-me">
                         <div class="section_title">
                             <h1 class = "header"> ABOUT </h1>
-                            <h3 class = "intro"> Hi! I am a rising senior at Washington University in St. Louis studying computer science. </h3>
+                            <h3 class = "intro"> Hi! I am a senior at Washington University in St. Louis studying computer science. </h3>
                         </div>
                         <div class="profile_container">
                             <img src="assets/profile.jpeg" class= "profile">
                         </div>
                         <div class = "am-container">
                             <div class="personal_info">
-                                <h1 class = "job"> Software Developer </h1>
-                                <h3 class = "desc"> I am a current SWE intern @Tesla in the vehical automation inspection team, focusing on Front-End development utilizing React, Typescript, GraphQL, and more. </h3>
+                                <h1 class = "job"> Software Engineer </h1>
+                                <h3 class = "desc"> I am an incoming SWE @PayPal SDK team, ex-SWE @Tesla, @Spectrum, and @Start-ups. </h3>
                                 <div class= "column_info">
                                     <ul class = "col1">
                                         <li> <i class="fa-solid fa-location-dot" style="padding-right: 15px;"></i> <b> Location (USA): </b> <span> St. Louis, MO  </span></li>
@@ -217,7 +217,7 @@
                     <!-- Resume -->
                     <div id = "r" class = "resume">
                         <h1 id = "hr" class = "header"> Education / Work Experience </h1>
-                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/Chan Lee Official Resume Intern w_ GPA (43).pdf" target="_blank"> here </a> </h4>
+                        <h4 class = "instr"> My official resume can be seen <a id = "here" style="color: #2980B9;" href = "assets/personal_website/Chan_Lee_Resume.pdf" target="_blank"> here </a> </h4>
                         <div class="timeline_container">
                             <div class="timeline">
                                 <ul>
@@ -227,6 +227,14 @@
                                             <h4> 2020 - 2024 (Projected) </h4>   
                                             <p>  <em> Washington University in St. Louis </em> </p>
                                             <p> A  <a href="https://www.w-block.com/" style="text-decoration: none; color: white"> W-Block </a> ex-Lead Developer, <a href="https://acm.wustl.edu/" style="text-decoration: none; color: white"> ACM </a> Member,  <a href="https://www.instagram.com/kisswustl/" style="text-decoration: none; color: white"> KISS </a> Vice President. <br> GPA: 3.85</p>
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="timeline-content">
+                                            <h1> Incoming SWE </h1> 
+                                            <h4> August 2024  </h4>   
+                                            <p>  <em> <a href="https://www.tesla.com/careers/" style="text-decoration: none; color: white;"> PayPal </a> </em> </p>
+                                            
                                         </div>
                                     </li>
                                     <li>
